k8s/namespace.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: tinaa
  labels:
    app.kubernetes.io/name: tinaa-msp
    app.kubernetes.io/part-of: tinaa
